# oh-ai-agent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  design.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  railway.toml  spec-new.docx  spec.docx  start.sh  tokens.css
.hallmark/: log.json
docs/: CHANGELOG-feedback.md  DEPLOY_VERCEL_RAILWAY.md  LOCAL_SETUP.md  feedback-changelog-wireframes.html
feedback/: Feedabck-v3.docx  feedback.docx
frontend/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/audit/: page.tsx
frontend/src/app/benchmark/: page.tsx
frontend/src/app/compliance-audit/: page.tsx
frontend/src/app/gap-analysis/: page.tsx
frontend/src/app/improvement-plan/: page.tsx
frontend/src/components/: callout.tsx  mobile-nav.tsx  org-hazard-form.tsx  page-header.tsx  sidebar.tsx  sources-cited.tsx  status-badge.tsx
frontend/src/lib/: api.ts  form-draft.test.ts  form-draft.ts  form-options.test.ts  form-options.ts  nav-items.ts  resource-links.ts  status-styles.ts  types.ts  workflow-export.ts
knowledge_base/: test_doc.txt  test_guidance.txt
src/oh_agent/: __init__.py  config.py  main.py
src/oh_agent/agents/: __init__.py  benchmark_agent.py  guardrails.py  llm_client.py  workflow_agent.py  workflow_parse.py
src/oh_agent/knowledge/: __init__.py  ingestion.py  retriever.py  sources.py
src/oh_agent/middleware/: __init__.py  logging.py
src/oh_agent/models/: __init__.py  audit.py  hazard.py  organisation.py  workflow.py
src/oh_agent/privacy/: __init__.py  pii_masking.py
src/oh_agent/services/: audit_service.py
tests/: conftest.py  test_api.py  test_audit_service.py  test_benchmark_agent.py  test_guardrails.py  test_knowledge.py  test_llm_client.py  test_models.py  test_pii_masking.py  test_workflow_parse.py
(+4 files in other folders)
