[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oh-ai-agent"
version = "0.1.0"
description = "Agent Harness for occupational health in the UK — evidence-based, regulation-aligned workflow generation"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.32,<1",
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.6,<3",
    "httpx>=0.27,<1",
    "chromadb>=0.5,<1",
    "openai>=1.50,<2",
    "tiktoken>=0.7,<1",
    "python-multipart>=0.0.12",
    "python-docx>=1.1,<2",
    "structlog>=24.4,<26",
    "uuid7>=0.1,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.24,<1",
    "pytest-cov>=5,<7",
    "httpx>=0.27,<1",
    "ruff>=0.7,<1",
    "mypy>=1.13,<2",
    "pre-commit>=4,<5",
]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "S",    # flake8-bandit (security)
    "T20",  # flake8-print
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = ["S101"]  # allow assert in tests

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S", "T20"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests requiring external services",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["chromadb.*", "tiktoken.*", "uuid7.*", "uuid_extensions.*"]
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["src/oh_agent"]
